[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/missing-texture.png" type="Texture" id=1]
[ext_resource path="res://src/PickupableObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 4 )

[node name="PickupableObject" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="PickupZoneShape" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 2 )
